examples/test/testpolicy18499.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18499
  namespace: namespace49
spec:
  podSelector:
    matchLabels:
      key20: value25
      key36: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value44
          key5: value46
          key32: value16
      podSelector:
        matchLabels:
          key34: value25
          key31: value28
          key5: value40
